<resources>
    <string name="app_name">IntCalculator</string>

    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>

    <string name="opMas">+</string>
    <string name="opMenos">-</string>
    <string name="opMulti">x</string>
    <string name="opDiv">%</string>

    <string name="equal">=</string>
    <string name="delete">CE</string>>
    <string name="point">.</string>>

</resources>