<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <Button
        android:id="@+id/button0"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/number0"
        app:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/button8"
        android:text="@string/number8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button0"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button5"
        android:text="@string/number5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button8"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button2"
        android:text="@string/number2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button5"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintVertical_bias="1"
        android:layout_marginVertical="20dp"
        android:lines="1"
        android:textStyle="bold"
        android:textSize="60sp"
        tools:text="1234"
        android:textAlignment="textEnd"/>

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvResult"
        app:layout_constraintVertical_bias="1"
        android:layout_marginVertical="20dp"
        android:lines="1"
        android:textSize="40sp"
        tools:text="1234"
        android:textAlignment="textEnd"/>

    <Button
        android:id="@+id/button1"
        android:text="@string/number1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button5"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button3"
        android:text="@string/number3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button5"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button4"
        android:text="@string/number4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button8"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button6"
        android:text="@string/number6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button8"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button7"
        android:text="@string/number7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button0"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/button9"
        android:text="@string/number9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button0"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/light_grey"/>

    <Button
        android:id="@+id/buttonEqual"
        android:text="@string/equal"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/orange"/>

    <Button
    android:id="@+id/buttonDelete"
    android:text="@string/delete"
    android:layout_width="75dp"
    android:layout_height="37.5dp"
    app:layout_constraintEnd_toStartOf="@id/button2"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/button1"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/buttonPoint"
        android:text="@string/point"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@id/button0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/dark_grey"/>

    <Button
        android:id="@+id/buttonMas"
        android:text="@string/opMas"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/buttonEqual"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonMenos"
        android:text="@string/opMenos"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMas"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonMulti"
        android:text="@string/opMulti"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMenos"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonDiv"
        android:text="@string/opDiv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMulti"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"/>









</androidx.constraintlayout.widget.ConstraintLayout>